New Depsgraph: Making local a linked group, it doesn't respect an Action till reloading the file or deleting the linked group. #46243

Closed
opened 2015-09-24 17:45:55 +02:00 by Mario Mey · 15 comments

The 76a_duplicate_make_local.blend has a group with an armature and a cube parented to the bone.
The 76b_duplicate_make_local.blend has that group linked and the armature proxied. The new armature grupo_proxy has an action.

  • Open the file 76b_duplicate_make_local.blend
  • Select and delete "grupo_proxy".
  • Select group "grupo" and Ctrl-Shift-A, to Make Duplicate Real it. Check "Keep Hirarchy".
  • Assign the previous action "grupo_proxyAction" to the armature "Armature".
  • Try changing the frame through the timeline: the armature doesn't respect the action.

Workarrounds:

  • Delete the empty "grupo" (it was the linked group): the armature moves.
    Or:
  • Save and reload the file: it moves.

76a-duplicate-make-local.blend

76b-duplicate-make-local.blend

The 76a_duplicate_make_local.blend has a group with an armature and a cube parented to the bone. The 76b_duplicate_make_local.blend has that group linked and the armature proxied. The new armature grupo_proxy has an action. - Open the file 76b_duplicate_make_local.blend - Select and delete "grupo_proxy". - Select group "grupo" and Ctrl-Shift-A, to Make Duplicate Real it. Check "Keep Hirarchy". - Assign the previous action "grupo_proxyAction" to the armature "Armature". - Try changing the frame through the timeline: the armature doesn't respect the action. Workarrounds: - Delete the empty "grupo" (it was the linked group): the armature moves. Or: - Save and reload the file: it moves. [76a-duplicate-make-local.blend](https://archive.blender.org/developer/F238591/76a-duplicate-make-local.blend) [76b-duplicate-make-local.blend](https://archive.blender.org/developer/F238592/76b-duplicate-make-local.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2015-09-25 14:51:34 +02:00

Once again, please follow our submission template and guidelines next time, and include blender version (and test with latest builds from our buildbot too!)… Cannot reproduce this here with latest master, seems to work as expected, closing for now.

Once again, please follow our submission template and guidelines next time, and include blender version (and test with latest builds from [our buildbot](https://builder.blender.org/download) too!)… Cannot reproduce this here with latest master, seems to work as expected, closing for now.
Author

Sorry again.

System: Ubuntu Mate 14.04 x64, nVidia GT620

Blender version: 2.76-rc2 (from blender.org) with new depsgraph.
Recently tested: de80e69 (from builder) with new depsgraph.

The bug is in the new depsgraph. Using old depsgraph, it works as spected.

I modified a little the files and made a video to understand.

76b-bug.mp4

76b-duplicate-make-local.blend

76a-duplicate-make-local.blend

Sorry again. System: Ubuntu Mate 14.04 x64, nVidia GT620 Blender version: 2.76-rc2 (from blender.org) with new depsgraph. Recently tested: de80e69 (from builder) with new depsgraph. **The bug is in the new depsgraph.** Using old depsgraph, it works as spected. I modified a little the files and made a video to understand. [76b-bug.mp4](https://archive.blender.org/developer/F239037/76b-bug.mp4) [76b-duplicate-make-local.blend](https://archive.blender.org/developer/F239033/76b-duplicate-make-local.blend) [76a-duplicate-make-local.blend](https://archive.blender.org/developer/F239034/76a-duplicate-make-local.blend)

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Oh yes, indeed, noting that issue is with new depsgraph is kind of… fundamental here! sigh

Oh yes, indeed, noting that issue is with new depsgraph is kind of… fundamental here! *sigh*
Bastien Montagne removed their assignment 2015-09-25 15:59:59 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2015-09-25 15:59:59 +02:00

Added subscribers: @Sergey, @JoshuaLeung

Added subscribers: @Sergey, @JoshuaLeung

@Sergey, @JoshuaLeung, this one is for you guys. :)

@Sergey, @JoshuaLeung, this one is for you guys. :)
Bastien Montagne changed title from Making local a linked group, it doesn't respect an Action till reloading the file or deleting the linked group. to New Depsgraph: Making local a linked group, it doesn't respect an Action till reloading the file or deleting the linked group. 2015-09-25 16:01:00 +02:00
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

This is probably another case where the depsgraph simply isn't rebuilt when needed. For example, adding any new object will also "fix" the problem, no need to reload the whole file.

BTW i noticed a similar thing with rigid bodies with new depsgraph, where simply enabling "Rigid Body" in the physics buttons does not rebuild the depsgraph by itself, but works fine after forcing an update through another method (e.g. adding an object).

Hopefully there is a generic solution to rebuilding the new depsgraph, without having to go through every single potential case?

This is probably another case where the depsgraph simply isn't rebuilt when needed. For example, adding any new object will also "fix" the problem, no need to reload the whole file. BTW i noticed a similar thing with rigid bodies with new depsgraph, where simply enabling "Rigid Body" in the physics buttons does not rebuild the depsgraph by itself, but works fine after forcing an update through another method (e.g. adding an object). Hopefully there is a generic solution to rebuilding the new depsgraph, without having to go through every single potential case?

This issue was referenced by 90bac235ea

This issue was referenced by 90bac235eaac6c026d552fc46fe26f86c52c8230

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46243
No description provided.