Fix T46243: New Depsgraph: changing action misses relations update tag